# rag-documents

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
backend/: .env.example  Dockerfile  main.py  schemas.py  settings.py
backend/core/: catalog.py  chunk.py  extract.py  generate.py  ingest.py  ollama_client.py  retrieve.py  rewrite.py  scheduler.py  sparse.py  store.py
backend/core/ocr/: __init__.py  surya_provider.py
backend/routers/: chat.py  documents.py  health.py
docker/postgres/: init.sql
docs/: Designing a Production-Grade RAG Architecture.md  convert.py
frontend/: .env.example  Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  types.ts
frontend/src/components/: DocumentsTable.tsx  MarkdownContent.tsx  OcrMarker.tsx  SourceTypeBadge.tsx  StatusBadge.tsx  Uploader.tsx
frontend/src/lib/: api.ts  theme.ts  utils.ts
frontend/src/pages/: ChatPage.tsx  DocumentsPage.tsx
scripts/: analyze_csv.py  backup.sh  find_invalid_pdfs.py  import_das.py  restore.sh  sample_pdfs.py
specs/: design.md  production.md  rag-2026.md  requirements.md  roadmap.md  tasks.md
